# Introduccion-a-la-Ingenieria-de-Datos-Final

./: .env  README.md  pyproject.toml  pyproject.toml.bk  setup.cfg  setup.py
Proyectos Docker/example_compose_2/init-sql/: init.sql
dagster_home/.telemetry/: id.yaml
dagster_home/history/: runs.db
dagster_home/history/runs/: 002dc7cf-6ea6-4a94-b99b-a3969ffc5db6.db  34bb6ec3-dbc6-47e1-827e-38915f10105d.db  6c9fc562-d5c2-4518-9ce2-c0a3229d1dd1.db  884cb651-76b5-4013-a5d8-b071555740c7.db  c77741be-e65e-469a-98ff-461d27e7bb88.db  d19f1f6c-2c89-4ed9-b526-705d8ce07996.db  d2e9abc9-b22a-4640-95bd-f2785377cad5.db  index.db
dagster_home/schedules/: schedules.db
dbt_testing/: dbt_project.yml
dbt_testing/models/: critic_reviews.sql  movies.sql  movies_users.sql  review_stats.sql  schema.yml  user_critic_reviews.sql  user_reviews.sql
dg_testing/: configs.yml  dbt_integrations.py  definitions.py
dg_testing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dg_testing/assets/: airbyte.py  dbt.py  model_helper.py  train_model.py
dg_testing/resources/: __init__.py
